# YCode

./: .gitignore  LICENSE  README.md  bun.lockb  index.html  package-lock.json  package.json  splash.html  vite.config.ts
.github/workflows/: build.yml
.million/: store.json
src/: App.tsx  IDE.css  IDE.tsx  Onboarding.css  Onboarding.tsx  Shortcut.tsx  styles.css
src-tauri/: Cargo.toml  install_theos.sh  tauri.conf.json  unxip
src-tauri/apple-private-apis/: Cargo.toml
src-tauri/apple-private-apis/icloud-auth/: Cargo.toml
src-tauri/apple-private-apis/icloud-auth/rustcrypto-srp/: Cargo.toml
src-tauri/apple-private-apis/icloud-auth/src/: anisette.rs  client.rs  lib.rs
src-tauri/apple-private-apis/omnisette/: Cargo.toml
src-tauri/apple-private-apis/omnisette/src/: lib.rs  remote_anisette_v3.rs
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: apple.rs  certificate.rs  commands.rs  device.rs  main.rs  operation.rs  sdk.rs  sourcekit_lsp.rs  swift.rs  templates.rs  theos.rs  windows.rs
src-tauri/src/builder/: config.rs  crossplatform.rs  mod.rs  packer.rs  sdk.rs  swift.rs  symlink.rs
src-tauri/src/sideload/: mod.rs
src-tauri/src/sideload/anisette/: anisette_data.rs  mod.rs
src-tauri/src/sideload/server/: apple_account.rs  mod.rs
src-tauri/src/sideloader/: apple.rs  apple_commands.rs  application.rs  bundle.rs  certificate.rs  developer_session.rs  device.rs  mod.rs  sideload.rs
src-tauri/templates/swiftui/: Makefile
src-tauri/templates/swiftui/src/: ContentView.swift  {{projectName}}.swift
src-tauri/templates/uikit/: Package.swift  ycode.toml
src-tauri/templates/uikit/Resources/: Info.plist
src/components/: CodeEditor.css  CodeEditor.tsx  CommandButton.tsx  FileExplorer.tsx  ModeToggle.tsx  OperationView.css  OperationView.tsx  RunCommand.css  RunCommand.tsx  SDKMenu.tsx  SwiftMenu.tsx  Tile.css  Tile.tsx
src/components/Menu/: MenuBar.tsx  MenuBarButton.tsx  MenuBarDefinition.tsx  MenuGroup.tsx
src/components/Tiles/: Console.css  Console.tsx  Editor.css  Editor.tsx  FileExplorer.css  FileExplorer.tsx  Run.tsx  Tile.css  Tile.tsx
src/pages/: IDE.css  IDE.tsx  New.css  New.tsx  NewTemplate.tsx  Onboarding.css  Onboarding.tsx  Pref.tsx  Prefs.css  Prefs.tsx  Splash.css  Splash.tsx
src/preferences/: PreferenceItemRenderer.tsx  Preferences.tsx  Prefs.css  helpers.ts  registry.ts  types.ts
src/preferences/pages/: appIds.tsx  appearance.ts  appleId.ts  certificates.tsx  developer.ts  editor.ts  general.ts  index.ts  swift.ts  swift.tsx
src/utilities/: Command.tsx  IDEContext.tsx  StoreContext.tsx  TauriFileSystemProvider.ts  lsp-client.ts  operations.ts  templates.ts
templates/swiftui/: control
