[package]
name = "y-code"
version = "0.0.1"
description = "Cross platform iOS IDE"
authors = ["nab138"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
idevice = { version = "0.1.35", features = ["full"] }
futures = "0.3.31"
keyring = "2"
icloud_auth = {path = "./apple-private-apis/icloud-auth" }
once_cell = "1.21.3"
sha1 = "0.10.6"
hex = "0.4.3"
openssl = "0.10"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
