[package]
name = "y-code"
version = "0.0.1"
description = "Cross platform iOS IDE"
authors = ["nab138"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = { version = "2", features= ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
idevice = { version = "0.1.35", features = ["usbmuxd", "afc", "installation_proxy"] }
futures = "0.3.31"
keyring = "2"
once_cell = "1.21.3"
sha1 = "0.10.6"
hex = "0.4.3"
openssl = { version = "0.10", features = ["vendored"] }
plist = { version = "1.7.2" }
zip = { version = "4.1.0", default-features = false, features = ["deflate"] }
isideload = { path = "../../isideload/isideload", features = ["vendored-botan", "vendored-openssl"] }
uuid = "1.17.0"
walkdir = "2.5.0"
dircpy = "0.3.19"
tar = "0.4.44"
reqwest = "0.12.22"
flate2 = "1.1.2"
regex = "1"
toml = "0.9.2"
wslpath2 = "0.1.3"
zsign-rust = "0.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
